src/FinancialForce Accounting/objects/codaPaymentMediaControl__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>Holds information for payment transmission including payment values, company, and company bank account details.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deprecated : Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Media Controls</relationshipLabel>
        <relationshipName>PaymentProposalSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipName>PaymentProposalSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountNumber__c</fullName>
        <label>Originator Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankCity__c</fullName>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankCountry__c</fullName>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankIbanNumber__c</fullName>
        <label>Bank IBAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankSortCode__c</fullName>
        <label>Originator Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankStateProvince__c</fullName>
        <label>Bank State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BankSwiftNumber__c</fullName>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankZipPostalCode__c</fullName>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectDebitOriginatorReference__c</fullName>
        <label>Direct Debit Originator Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountValue__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofAccounts__c</fullName>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payment Media Controls (Company)</relationshipLabel>
        <relationshipName>PaymentMediaControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayeeName__c</fullName>
        <label>Originator Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentControlNumber__c</fullName>
        <label>Payment Control Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipLabel>Payment Media Controls</relationshipLabel>
        <relationshipName>PaymentMediaControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipPostCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Payment Media Control</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Media Control Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Controls</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>